fixed category looks, changed tree ordering alignment to left, made  > V buttons to minimize / expand, comments can now have prices discounts etc

--- a/src/app/offers/[oID]/OfferProductsPanel.module.css
+++ b/src/app/offers/[oID]/OfferProductsPanel.module.css
@@ -35,6 +35,22 @@
   color: #94a3b8;
 }
 
+.treeOrderingIndicatorButton {
+  border: none;
+  background: transparent;
+  padding: 0;
+  margin: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  line-height: 1;
+}
+
+.treeOrderingIndicatorButton:disabled {
+  cursor: default;
+}
+
 .totalsBar {
   display: flex;
   flex-wrap: wrap;
